* Removed unnecessary "utf-8" declaration * Fixed a search input display issue on Safari

--- a/src/styles/atoms/_atoms.input.scss
+++ b/src/styles/atoms/_atoms.input.scss
@@ -12,6 +12,7 @@
 
 button,
 input,
+input[type="search"],
 select,
 textarea {
   appearance: none;
